# NucleusInstitute

./: .gitignore  PLAN.md  README.md  THINGS2NOTE.md  TODO.md  Taskfile.yml  docker-compose.yml  glossary.html
autopilot/: .env.example  Dockerfile  README.md  pyproject.toml
autopilot/app/: agent.py  bootstrap.py  config.py  db.py  main.py  mcp_server.py  nucleus_client.py  scheduler.py  store.py
autopilot/app/api/: routes.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  auto_match.py  connect.py  discovery.py  email.py  health.py  match.py  onboard.py  startup.py  swipe.py  talent.py
backend/app/core/: config.py  google_oauth.py  handoff_cache.py  linkedin_oauth.py  oauth_state.py
backend/app/dao/: base.py  factory.py
backend/app/dao/daos/: auto_match_dao.py  follow_dao.py  profile_embedding_dao.py  startup_dao.py  startup_profile_extension_dao.py  swipe_list_dao.py  talent_dao.py  talent_profile_extension_dao.py
backend/app/database/: connection.py
backend/app/mcp/: __init__.py  auto_match_email_server.py  connect_server.py  onboard_server.py  server.py
backend/app/model/database/: __init__.py  auto_match.py  follow.py  profile_embedding.py  startup.py  startup_profile_extension.py  swipe_list.py  talent.py  talent_profile_extension.py
backend/app/model/schema/: auth.py  auto_match.py  connect.py  discovery.py  email.py  enums.py  follow.py  match.py  profile_extension.py  startup.py  swipe.py  talent.py
backend/app/provider/auto_match/: __init__.py  email_drafter.py
backend/app/provider/matching/: __init__.py  agentic_filter.py  base.py  embedding.py  filters.py  rule_filter.py
backend/app/seed/: generator.py  utah_synthetic.py
backend/app/service/: auto_match_service.py  connect_service.py  discovery_service.py  email_service.py  matching_service.py  network_service.py  onboard_service.py  pagerank_service.py  startup_service.py  swipe_service.py  talent_service.py
backend/app/templates/email/: outreach.html.j2
backend/data/seed/: nucleus_seed.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/public/data/: Map Data for Builder Day.csv
frontend/src/: App.tsx  api.ts  config.ts  data.ts  export.ts  index.css  labels.ts  routeHero.ts  types.ts
frontend/src/components/: BrandPanel.tsx  Cards.tsx  ConnectionWeb.tsx  HeroStrip.tsx  SideNav.tsx  SwipeDeck.tsx  TopNav.tsx  ui.tsx
frontend/src/ecosystem/: EcosystemContext.tsx  EcosystemPage.tsx  inferenceApi.ts
frontend/src/pages/: BrowsePage.tsx  ExplorePage.tsx  LandingPage.tsx  MatchPage.tsx  (+5 more)
recruiter/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml
recruiter/src/: App.tsx  agent.ts  index.css
resources/nucleus_export/: Nucleus Hub - standalone.html  Nucleus Hub.html  components.jsx  data.js  pages.jsx  swipe-deck.jsx
scripts/: generate-env.sh
(+29 files in other folders)
