[project]
name = "heal-autopilot"
version = "0.1.0"
description = "HEAL Engineering hiring autopilot — agent-driven candidate sourcing on a schedule"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "anthropic>=0.100.0",
    "fastmcp>=3.2.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
]

[tool.uv]
package = false
