[project]
name = "nucleus-backend"
version = "0.1.0"
description = "Nucleus Institute — Utah Innovation Connections Hub backend (talent ↔ startup matching)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[pool,binary]>=3.2.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    # Provides `python_sentry_logger_wrapper.get_logger` — same logger as the HEAL FastAPI template.
    "sentry-struct-logger",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "venv", "__pycache__", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
