[project]
name = "nucleus-backend"
version = "0.1.0"
description = "Nucleus Institute — Utah Innovation Connections Hub backend (talent ↔ startup matching)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    # Provides `python_sentry_logger_wrapper.get_logger` — same logger as the HEAL FastAPI template.
    "sentry-struct-logger",
    "fastmcp>=3.2.4",
    "anthropic>=0.100.0",
    "numpy>=2.0.0",
    # Local sentence-transformer for the EmbeddingMatcher (Apache 2.0, runs offline).
    "sentence-transformers>=3.0.0",
    # Outreach email rendering + delivery.
    "jinja2>=3.1.0",
    "resend>=2.0.0",
    # In-process cron for the weekly auto-match digest. Runs in FastAPI's lifespan.
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "venv", "__pycache__", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
